2001-02-25 Ian MacPhedran <Ian_MacPhedran@engr.USask.Ca>

	* output-fig.c: Updated.
	Added support for the "centerline" option
	Added code to reduce the number of FIG "levels" produced
 
2001-02-24  Masatake YAMATO  <yamato@redhat.com>

	Applied patches from Martin.
	
	* output-eps.c: Made the centerline eps output 
	compatible to CorelDraw.

	Applied patches from Martin.

	* thin-image.c: 
	Made it C++ compatible again (replaced delete by todelete) and 
	removed some warnings.

 	* output-er.c: Made it C++ compatible, replaced malloc my 
	XMALLOC and removed some unnecessary code.

	* pxl-outline.c: Moved edge.h to pxl-outline.c, some cleanup and
	removed some warnings.

	* edge.h: Removed, because the code was added to pxl-outline.c.

2001-02-24  Masatake YAMATO  <yamato@redhat.com>

	* median.c (quantize): Applied a patch from Martin.
	-- I removed a bug in median.c:
	fixed wrong color count

2001-02-23  Masatake YAMATO  <yamato@redhat.com>

	* HACKING (Autofig): Updated.

	* autogen.sh: Check whether autofig is existed or not.

	Applied patches from Martin.
	-- I removed some compiler warnings in color.h 
	and pxl-outline.c. Also I have a new autotrace.dsp.

	* pxl-outline.c: Updated.

	* color.h: Updated.

	* autotrace.dsp: Updated.

2001-02-23  Masatake YAMATO  <yamato@redhat.com>
	
	* configure.in: Set version to 0.27pre.

	* output-eps.c (out_splines): Use at_centerline.

	* main.c (main): Use at_centerline.
	(centerline): static scope.
	
	* autotrace.[hc] (at_centerline): New varaible.
	
2001-02-22  Masatake YAMATO  <yamato@redhat.com>

	* output.h (OUTPUT_SUFFIX_LIST): Added "er".

2001-02-20  Martin Weber <martweb@gmx.net>

	-- Centerline vectorization

	* Makefile.am: Added output-er.c and .h.

	* autotrace.c: Modified at_splines_new() to support centerline
		vectorization.

	* autotrace.h: Added 'open' flag to at_spline_list_type.

	* color.h: Added COLOR_LUMINANCE() macro.

	* curve.h: Added 'open' flag to curve_list_type.
